--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   </head>
   <body>
 
+<!-- top0 -->
+<div class='top0' id='top0'></div>
+
+<!-- header -->
+<div class='logo' id='logo'>EM</div>
+
+<div class='menu'>
+  <div class='linea_menu linea_dritta1'></div>
+  <div class='linea_menu linea_dritta2'></div>
+</div>
+
 <!-- grigi -->
   <div id='portfolio_container1' class='portfolio_container'>
 
@@ -203,6 +214,7 @@
   <div class='button_filtri selected'> Visualizza </div>
   <div class='line_filtri'>  </div>
 
+  <a href='#top0'>
   <div class='button_filtri' id='lista'>Lista</div>
   <div class='button_filtri_immagini not_selected' id='immagini'>Immagini</div>
   <div class='quadratino_filtri q_lista' id='quadratino1'>  </div>
@@ -214,6 +226,7 @@
   <div class='button_filtri not_selected' id='illustrazioni'>Illustrazioni</div>
   <div class='button_filtri not_selected' id='installazioni'>Installazioni</div>
   <div class='quadratino_filtri q_tutti' id='quadratino2'>  </div>
+  </a>
 
 </div>
 
