--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
 <!-- top0 -->
 <div class='top0' id='top0'></div>
 
-<!-- header -->
-<div class='logo' id='logo'>EM</div>
-
-<div class='menu'>
-  <div class='linea_menu linea_dritta1'></div>
-  <div class='linea_menu linea_dritta2'></div>
-</div>
 
 <!-- grigi -->
   <div id='portfolio_container1' class='portfolio_container'>
@@ -228,6 +221,16 @@
   <div class='quadratino_filtri q_tutti' id='quadratino2'>  </div>
   </a>
 
+</div>
+
+
+<!-- header -->
+<div class='logo' id='logo'>EM</div>
+
+<div id='false_menu' class='menu hide'></div>
+<div id='menu' class='menu'>
+  <div id='linea_menu1' class='linea_menu linea_dritta1'></div>
+  <div id='linea_menu2' class='linea_menu linea_dritta2'></div>
 </div>
 
   </body>
