--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <!-- grigi -->
-  <div id='portfolio_container1' class='portfolio_container'>
+<div id='portfolio_container1' class='portfolio_container'>
 
     <div id='nome_e_descrizione' class='nome_e_descrizione_line opacity1 installazione'>
       <div id='nome' class='nome'> Deposito Cinerario Italiano </div>
@@ -228,11 +228,27 @@
 <!-- header -->
 <div class='logo' id='logo'>EM</div>
 
+<!-- menu -->
 <div id='false_menu' class='menu hide'></div>
 <div id='menu' class='menu'>
   <div id='linea_menu1' class='linea_menu linea_dritta1'></div>
   <div id='linea_menu2' class='linea_menu linea_dritta2'></div>
 </div>
+
+<!-- menu_container -->
+<div id='menu_container' class='hide'>
+  <div id='menu_list' class='menu_list'>
+    <a href='index.html' class='menu_name'>Home <br></a>
+    <a href='index.html' class='menu_name'>Chi sono<br> </a>
+    <a href='index.html' class='menu_name'>Portfolio<br> </a>
+  </div>
+  <div id='menu_contact' class='menu_contact'>
+    <div class='menu_line'></div>
+    Behance <br>
+    elisamanzoni98@gmail.com
+  </div>
+</div>
+
 
   </body>
 </html>
