--- a/portfolio.html
+++ b/portfolio.html
@@ -105,49 +105,49 @@
 <div id='portfolio_container' class='portfolio_container'>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line installazione'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/deposito.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Deposito Cinerario Italiano </div>
     <div id='descrizione' class='descrizione'> INSTALLAZIONE - 2019 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line digitale'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/photo_mosaic_screen.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Izi photo mosaic </div>
     <div id='descrizione' class='descrizione'> WEB APP - 2019 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line coorporate'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/zefir.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Zefir </div>
     <div id='descrizione' class='descrizione'> COORPORATE IDENTITY - 2019 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line editoriale'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/diciotti.jpg' class='image_line' id='image'>
     <div id='nome' class='nome'> Il caso Diciotti </div>
     <div id='descrizione' class='descrizione'> INDAGINE MEDIATICA - 2018 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line digitale'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/monstereye.png' class='image_line' id='image'>
     <div id='nome' class='nome'> MonsterEye </div>
     <div id='descrizione' class='descrizione'> CREATIVE CODING - 2020 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line illustrazione'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/mengoni.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Atlantico Mengoni </div>
     <div id='descrizione' class='descrizione'> ILLUSTRAZIONE - 2018 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line digitale'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/arthur_screen.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Arthur's chronicles </div>
     <div id='descrizione' class='descrizione'> VIDEOGIOCO - 2018 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line coorporate'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/sparkle.jpg' class='image_line' id='image'>
     <div id='nome' class='nome'> Sparkle cruises </div>
     <div id='descrizione' class='descrizione'> COORPORATE IDENTITY - 2018 </div>
   </div>
@@ -165,25 +165,25 @@
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line coorporate'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/dot_con.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Dot Con </div>
     <div id='descrizione' class='descrizione'> COORPORATE IDENTITY - 2018 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line coorporate'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/sotto_il_monte.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Sotto il Monte in Festa </div>
     <div id='descrizione' class='descrizione'> COORPORATE IDENTITY - 2018 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line digitale'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/keith_haaring.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Keith Haaring </div>
     <div id='descrizione' class='descrizione'> VIDEO ANIMAZIONE - 2017 </div>
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line coorporate'>
-    <img src='assets/mela.jpg' class='image_line' id='image'>
+    <img src='assets/lavori_quadrati/garibaldina.png' class='image_line' id='image'>
     <div id='nome' class='nome'> La Garibaldina </div>
     <div id='descrizione' class='descrizione'> COORPORATE IDENTITY - 2017 </div>
   </div>
@@ -195,7 +195,7 @@
   </div>
 
   <div id='nome_e_descrizione' class='nome_e_descrizione_line illustrazione'>
-        <img src='assets/mela.jpg' class='image_line' id='image'>
+        <img src='assets/lavori_quadrati/alpini.png' class='image_line' id='image'>
     <div id='nome' class='nome'> Adunata Sezionale Alpini </div>
     <div id='descrizione' class='descrizione'> ILLUSTRAZIONE - 2016 </div>
   </div>
