--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <link rel="stylesheet" href="style.css" media="screen" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700,700i,900&display=swap" rel="stylesheet">
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="home.css" rel="stylesheet">
   </head>
   <body>
+<div id="header" class="header">
+  <!-- <div id="about" class="header_name"></div>
+  <div id="works" class="header_name"></div> -->
 
-<!-- sfondo -->
-<div id='nome_background' class='nome_background'>
-  elisa_ <br>
-  manzoni
+  <a href="about.html" id="about" class="header_name">ABOUT</a>
+  <a href="works.html" id="works" class="header_name">WORKS</a>
+  <div id="line_header" class="line line_header"></div>
 </div>
 
-
-<!-- menu -->
-<div id='false_menu' class='menu hide'></div>
-<div id='menu' class='menu white'>
-  <div id='linea_menu1' class='linea_menu linea_dritta1'></div>
-  <div id='linea_menu2' class='linea_menu linea_dritta2'></div>
-</div>
-
-<!-- menu_container -->
-<div id='menu_container' class='hide'>
-  <div id='menu_list' class='menu_list'>
-    <a href='index.html' class='menu_name'>Home <br></a>
-    <a href='about.html' class='menu_name'>Chi sono<br> </a>
-    <a href='portfolio.html' class='menu_name'>Portfolio<br> </a>
-  </div>
-  <div id='menu_contact' class='menu_contact'>
-    <div class='menu_line'></div>
-    <div class='menu_contact_name'>Behance <br></div>
-    <a href='mailto:elisamanzoni98@gmail.com' class='menu_contact_name'>elisamanzoni98@gmail.com</a>
-  </div>
+<div id="body" class="body">
+    <div id="home_description" class="home_description">
+      Mi chiamo Elisa e sono un’aspirante <a class="sottolineato">designer della comunicazione</a> di Bergamo. <br>
+      Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il coding.
+    </div>
 </div>
 
 
