--- a/works.html
+++ b/works.html
@@ -28,9 +28,9 @@
   </div>
 
   <div id="container" class="container">
-    <div id="year" class="lavori_nomi year"> 2020 </div>
-    <div id="nome" class="lavori_nomi nome"> Deposito Cinerario Italiano </div>
-    <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
+    <div id="year" class="lavori_nomi year"> 2019 </div>
+    <div id="nome" class="lavori_nomi nome"> Deposito Cinerario </div>
+    <div id="categoria" class="lavori_nomi categoria"> Speculative design </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
