--- a/works.html
+++ b/works.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="sketch.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -24,7 +27,25 @@
     <div id="year" class="lavori_nomi year"> 2020 </div>
     <div id="nome" class="lavori_nomi nome"> Olympic explore </div>
     <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
+    <div class="display_none">
+      <img src="images/deposito.png" class="img">
+      <div id="work_description" class="work_description">
+        Installazione di speculative design con lo scopo di far riflettere sulla morte
+      </div>
+      <div id="work_description2" class="work_description">
+        Competenze: <br>
+        Interazione digitale <br>
+        Interfaccia utente <br>
+        Programmazione web <br>
+        Space design
+      </div>
+      <div id="work_description3" class="work_description link">
+        <a> Progetto completo → </a> </div>
+    </div>
+
+
     <div id="line_works" class="line line_works"></div>
+
   </div>
 
   <div id="container" class="container">
