--- a/works.html
+++ b/works.html
@@ -24,10 +24,12 @@
   <div id="container" class="false_container container"></div>
 
   <div id="container" class="container">
-    <div id="year" class="lavori_nomi year"> 2020 </div>
-    <div id="nome" class="lavori_nomi nome"> Olympic explore </div>
-    <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
-    <div class="display_none">
+    <div id="container_olympic">
+      <div id="year" class="lavori_nomi year"> 2020 </div>
+      <div id="nome" class="lavori_nomi nome"> Olympic explore </div>
+      <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
+    </div>
+    <div id="description_olympic" class="display_none">
       <img src="images/deposito.png" class="img">
       <div id="work_description" class="work_description">
         Installazione di speculative design con lo scopo di far riflettere sulla morte
@@ -40,7 +42,7 @@
         Space design
       </div>
       <div id="work_description3" class="work_description link">
-        <a> Progetto completo → </a> </div>
+        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
     </div>
 
 
