--- a/works.html
+++ b/works.html
@@ -32,6 +32,30 @@
     <div id="description_olympic" class="display_none">
       <img src="images/deposito.png" class="img">
       <div id="work_description" class="work_description">
+        Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026
+      </div>
+      <div id="work_description2" class="work_description">
+        Competenze: <br>
+        Progettazione d'interni <br>
+        Identità visiva <br>
+        Service design <br>
+        Team working
+      </div>
+      <div id="work_description3" class="work_description link">
+        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_deposito">
+      <div id="year" class="lavori_nomi year"> 2019 </div>
+      <div id="nome" class="lavori_nomi nome"> Deposito Cinerario </div>
+      <div id="categoria" class="lavori_nomi categoria"> Speculative design </div>
+    </div>
+    <div id="description_deposito" class="display_none">
+      <img src="images/deposito.png" class="img">
+      <div id="work_description" class="work_description">
         Installazione di speculative design con lo scopo di far riflettere sulla morte
       </div>
       <div id="work_description2" class="work_description">
@@ -44,16 +68,30 @@
       <div id="work_description3" class="work_description link">
         <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
     </div>
-
-
     <div id="line_works" class="line line_works"></div>
-
   </div>
 
   <div id="container" class="container">
-    <div id="year" class="lavori_nomi year"> 2019 </div>
-    <div id="nome" class="lavori_nomi nome"> Deposito Cinerario </div>
-    <div id="categoria" class="lavori_nomi categoria"> Speculative design </div>
+    <div id="container_zefir">
+      <div id="year" class="lavori_nomi year"> 2019 </div>
+      <div id="nome" class="lavori_nomi nome"> Zefir </div>
+      <div id="categoria" class="lavori_nomi categoria"> Brand identity </div>
+    </div>
+    <div id="description_zefir" class="display_none">
+      <img src="images/deposito.png" class="img">
+      <div id="work_description" class="work_description">
+        Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione.
+      </div>
+      <div id="work_description2" class="work_description">
+        Competenze: <br>
+        Identità visiva <br>
+        Interfaccia utente <br>
+        Service design <br>
+        Team working 
+      </div>
+      <div id="work_description3" class="work_description link">
+        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+    </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
