--- a/works.html
+++ b/works.html
@@ -26,7 +26,8 @@
   <div id="container" class="container">
     <div id="container_olympic">
       <div id="year" class="lavori_nomi year"> 2020 </div>
-      <div id="nome" class="lavori_nomi nome"> Olympic explore </div>
+      <div id="olympic_nome" class="lavori_nomi nome"> Olympic explore </div>
+      <img src="images/arrow.png" id="olympic_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
     </div>
     <div id="description_olympic" class="display_none">
@@ -36,10 +37,10 @@
       </div>
       <div id="work_description2" class="work_description">
         Competenze: <br>
-        Progettazione d'interni <br>
-        Identità visiva <br>
-        Service design <br>
-        Team working
+        - Progettazione d'interni <br>
+        - Identità visiva <br>
+        - Service design <br>
+        - Team working
       </div>
       <div id="work_description3" class="work_description link">
         <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
@@ -50,7 +51,8 @@
   <div id="container" class="container">
     <div id="container_deposito">
       <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="nome" class="lavori_nomi nome"> Deposito Cinerario </div>
+      <div id="deposito_nome" class="lavori_nomi nome"> Deposito Cinerario </div>
+      <img src="images/arrow.png" id="deposito_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Speculative design </div>
     </div>
     <div id="description_deposito" class="display_none">
@@ -60,10 +62,10 @@
       </div>
       <div id="work_description2" class="work_description">
         Competenze: <br>
-        Interazione digitale <br>
-        Interfaccia utente <br>
-        Programmazione web <br>
-        Space design
+        - Interazione digitale <br>
+        - Interfaccia utente <br>
+        - Programmazione web <br>
+        - Space design
       </div>
       <div id="work_description3" class="work_description link">
         <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
@@ -74,7 +76,8 @@
   <div id="container" class="container">
     <div id="container_zefir">
       <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="nome" class="lavori_nomi nome"> Zefir </div>
+      <div id="zefir_nome" class="lavori_nomi nome"> Zefir </div>
+      <img src="images/arrow.png" id="zefir_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Brand identity </div>
     </div>
     <div id="description_zefir" class="display_none">
@@ -84,10 +87,33 @@
       </div>
       <div id="work_description2" class="work_description">
         Competenze: <br>
-        Identità visiva <br>
-        Interfaccia utente <br>
-        Service design <br>
-        Team working 
+        - Identità visiva <br>
+        - Interfaccia utente <br>
+        - Service design <br>
+        - Team working
+      </div>
+      <div id="work_description3" class="work_description link">
+        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_izi">
+      <div id="year" class="lavori_nomi year"> 2019 </div>
+      <div id="nome" class="lavori_nomi nome"> Izi photo mosaic </div>
+      <div id="categoria" class="lavori_nomi categoria"> Web experience </div>
+    </div>
+    <div id="description_izi" class="display_none">
+      <img src="images/deposito.png" class="img">
+      <div id="work_description" class="work_description">
+        Spazio digitale comune che invita gli utenti alla collaborazione
+      </div>
+      <div id="work_description2" class="work_description">
+        Competenze: <br>
+        - Interazione digitale <br>
+        - Interfaccia utente <br>
+        - Programmazione web <br>
       </div>
       <div id="work_description3" class="work_description link">
         <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
