--- a/works.html
+++ b/works.html
@@ -101,7 +101,8 @@
   <div id="container" class="container">
     <div id="container_izi">
       <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="nome" class="lavori_nomi nome"> Izi photo mosaic </div>
+      <div id="izi_nome" class="lavori_nomi nome"> Izi photo mosaic </div>
+      <img src="images/arrow.png" id="izi_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Web experience </div>
     </div>
     <div id="description_izi" class="display_none">
@@ -117,6 +118,29 @@
       </div>
       <div id="work_description3" class="work_description link">
         <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_diciotti">
+      <div id="year" class="lavori_nomi year"> 2019 </div>
+      <div id="diciotti_nome" class="lavori_nomi nome"> Il caso Diciotti </div>
+      <img src="images/arrow.png" id="diciotti_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Editorial design </div>
+    </div>
+    <div id="description_diciotti" class="display_none">
+      <img src="images/deposito.png" class="img">
+      <div id="work_description" class="work_description">
+        Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti
+      </div>
+      <div id="work_description2" class="work_description">
+        Competenze: <br>
+        - Progettazione grafica <br>
+        - Data visualization
+      </div>
+      <div id="work_description3" class="work_description link">
+        <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti"> Progetto completo → </a> </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
