--- a/works.html
+++ b/works.html
@@ -31,7 +31,7 @@
       <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
     </div>
     <div id="description_olympic" class="display_none">
-      <img src="images/deposito.png" class="img">
+      <img src="images/olympic.png" class="img">
       <div id="work_description" class="work_description">
         Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026
       </div>
@@ -81,7 +81,7 @@
       <div id="categoria" class="lavori_nomi categoria"> Brand identity </div>
     </div>
     <div id="description_zefir" class="display_none">
-      <img src="images/deposito.png" class="img">
+      <img src="images/zefir.png" class="img">
       <div id="work_description" class="work_description">
         Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione.
       </div>
@@ -106,7 +106,7 @@
       <div id="categoria" class="lavori_nomi categoria"> Web experience </div>
     </div>
     <div id="description_izi" class="display_none">
-      <img src="images/deposito.png" class="img">
+      <img src="images/izi.png" class="img">
       <div id="work_description" class="work_description">
         Spazio digitale comune che invita gli utenti alla collaborazione
       </div>
@@ -130,7 +130,7 @@
       <div id="categoria" class="lavori_nomi categoria"> Editorial design </div>
     </div>
     <div id="description_diciotti" class="display_none">
-      <img src="images/deposito.png" class="img">
+      <img src="images/diciotti.png" class="img">
       <div id="work_description" class="work_description">
         Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti
       </div>
