--- a/works.html
+++ b/works.html
@@ -23,8 +23,8 @@
 <div id="body">
   <div id="container" class="false_container container"></div>
 
-  <div id="container" class="container">
-    <div id="container_olympic">
+  <div id="container_olympic" class="container">
+    <div id="container">
       <div id="year" class="lavori_nomi year"> 2020 </div>
       <div id="olympic_nome" class="lavori_nomi nome"> Olympic explore </div>
       <img src="images/arrow.png" id="olympic_arrow" class="lavori_nomi arrow">
@@ -32,24 +32,26 @@
     </div>
     <div id="description_olympic" class="display_none">
       <img src="images/olympic.png" class="img">
-      <div id="work_description" class="work_description">
-        Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Progettazione d'interni <br>
+          - Identità visiva <br>
+          - Service design <br>
+          - Team working
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+        </div>
       </div>
-      <div id="work_description2" class="work_description">
-        Competenze: <br>
-        - Progettazione d'interni <br>
-        - Identità visiva <br>
-        - Service design <br>
-        - Team working
-      </div>
-      <div id="work_description3" class="work_description link">
-        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
-    </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container" class="container">
-    <div id="container_deposito">
+  <div id="container_deposito" class="container">
+    <div id="container">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="deposito_nome" class="lavori_nomi nome"> Deposito Cinerario </div>
       <img src="images/arrow.png" id="deposito_arrow" class="lavori_nomi arrow">
@@ -57,24 +59,26 @@
     </div>
     <div id="description_deposito" class="display_none">
       <img src="images/deposito.png" class="img">
-      <div id="work_description" class="work_description">
-        Installazione di speculative design con lo scopo di far riflettere sulla morte
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Installazione di speculative design con lo scopo di far riflettere sulla morte
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Interazione digitale <br>
+          - Interfaccia utente <br>
+          - Programmazione web <br>
+          - Space design
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
       </div>
-      <div id="work_description2" class="work_description">
-        Competenze: <br>
-        - Interazione digitale <br>
-        - Interfaccia utente <br>
-        - Programmazione web <br>
-        - Space design
-      </div>
-      <div id="work_description3" class="work_description link">
-        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container" class="container">
-    <div id="container_zefir">
+  <div id="container_zefir" class="container">
+    <div id="container">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="zefir_nome" class="lavori_nomi nome"> Zefir </div>
       <img src="images/arrow.png" id="zefir_arrow" class="lavori_nomi arrow">
@@ -82,24 +86,26 @@
     </div>
     <div id="description_zefir" class="display_none">
       <img src="images/zefir.png" class="img">
-      <div id="work_description" class="work_description">
-        Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione.
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione.
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Identità visiva <br>
+          - Interfaccia utente <br>
+          - Service design <br>
+          - Team working
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
       </div>
-      <div id="work_description2" class="work_description">
-        Competenze: <br>
-        - Identità visiva <br>
-        - Interfaccia utente <br>
-        - Service design <br>
-        - Team working
-      </div>
-      <div id="work_description3" class="work_description link">
-        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container" class="container">
-    <div id="container_izi">
+  <div id="container_izi" class="container">
+    <div id="container">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="izi_nome" class="lavori_nomi nome"> Izi photo mosaic </div>
       <img src="images/arrow.png" id="izi_arrow" class="lavori_nomi arrow">
@@ -107,23 +113,27 @@
     </div>
     <div id="description_izi" class="display_none">
       <img src="images/izi.png" class="img">
-      <div id="work_description" class="work_description">
-        Spazio digitale comune che invita gli utenti alla collaborazione
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Spazio digitale comune che invita gli utenti alla collaborazione
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Interazione digitale <br>
+          - Interfaccia utente <br>
+          - Programmazione web <br>
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://drawwithcode.github.io/2019-group-10-1/"> Provalo qui → </a> <br>
+          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a>
       </div>
-      <div id="work_description2" class="work_description">
-        Competenze: <br>
-        - Interazione digitale <br>
-        - Interfaccia utente <br>
-        - Programmazione web <br>
       </div>
-      <div id="work_description3" class="work_description link">
-        <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container" class="container">
-    <div id="container_diciotti">
+  <div id="container_diciotti" class="container">
+    <div id="container">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="diciotti_nome" class="lavori_nomi nome"> Il caso Diciotti </div>
       <img src="images/arrow.png" id="diciotti_arrow" class="lavori_nomi arrow">
@@ -131,16 +141,18 @@
     </div>
     <div id="description_diciotti" class="display_none">
       <img src="images/diciotti.png" class="img">
-      <div id="work_description" class="work_description">
-        Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Progettazione grafica <br>
+          - Data visualization
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti"> Progetto completo → </a> </div>
       </div>
-      <div id="work_description2" class="work_description">
-        Competenze: <br>
-        - Progettazione grafica <br>
-        - Data visualization
-      </div>
-      <div id="work_description3" class="work_description link">
-        <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti"> Progetto completo → </a> </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
